fix(legacy-app): Profile icon on Safari and Firefox

--- a/legacy-app/src/styles.scss
+++ b/legacy-app/src/styles.scss
@@ -294,4 +294,7 @@ $tumi-dark-theme: mat.define-dark-theme(
   .bg-blur {
     backdrop-filter: blur(16px) saturate(180%);
   }
+  .mat-list-avatar {
+    border-radius: 0 !important;
+  }
 }
